typescript/checker/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList14.ts.stderr
error: TS2371
 --> $DIR/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList14.ts:2:7
  |
2 |   foo(a = 1): void;
  |       ^^^^^

